--- a/tallerApi/composer.json
+++ b/tallerApi/composer.json
@@ -7,7 +7,8 @@
         "doctrine/orm": "^2.17",
         "doctrine/dbal": "^3.7",
         "doctrine/annotations": "^2.0",
-        "symfony/cache": "^6.0"
+        "symfony/cache": "^6.0",
+        "phpmailer/phpmailer": "^6.8"
     },
     "autoload": {
         "psr-4": {
